--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
-  "name": "graph contracts",
-  "dockerComposeFile": ["docker-compose.yml"],
+  "dockerComposeFile": [
+    "docker-compose.yml"
+  ],
   "service": "dev-graph-contracts",
   "features": {
     "ghcr.io/devcontainers/features/git:1": {
@@ -8,15 +9,20 @@
       "gitCredentialHelper": "cache"
     },
     "ghcr.io/devcontainers/features/github-cli:1": {},
-    "ghcr.io/devcontainers/features/common-utils:2.5.3": {},
+    "ghcr.io/devcontainers/features/common-utils:2.5.4": {},
     "ghcr.io/devcontainers/features/node:1": {
       "version": "20"
     },
-    "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.11"
+    }
   },
+  "mounts": [
+    "source=${localWorkspaceFolder},target=/work/${localWorkspaceFolderBasename},type=bind,consistency=cached"
+  ],
   "postCreateCommand": ".devcontainer/project-setup.sh",
   "remoteUser": "vscode",
-  "workspaceFolder": "${localWorkspaceFolder}",
+  "workspaceFolder": "/work/${localWorkspaceFolderBasename}",
   "customizations": {
     "vscode": {
       "extensions": [
@@ -28,7 +34,6 @@
         "shd101wyy.markdown-preview-enhanced",
         "bierner.markdown-preview-github-styles",
         "Gruntfuggly.todo-tree",
-        "ms-azuretools.vscode-docker",
         "donjayamanne.githistory",
         "eamodio.gitlens",
         "fill-labs.dependi",
@@ -36,7 +41,7 @@
         "Augment.vscode-augment",
         "NomicFoundation.hardhat-solidity",
         "foundry-rs.foundry-vscode",
-        "BlueGlassBlock.better-json5"
+        "esbenp.prettier-vscode"
       ]
     }
   }
