chore: refactor and productionize

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -13,10 +13,20 @@ spec:
     metadata:
       labels:
         app: service-quality-oracle
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/metrics"
+        prometheus.io/port: "8000"
     spec:
+      imagePullSecrets:
+        - name: docker-registry
       containers:
       - name: service-quality-oracle
         image: ghcr.io/graphprotocol/service-quality-oracle:latest
+        imagePullPolicy: IfNotPresent
+        ports:
+          - containerPort: 8000
+            name: metrics
         envFrom:
         # Load all non-sensitive configuration from ConfigMap
         - configMapRef:
@@ -89,6 +99,15 @@ spec:
             - "import os; assert os.path.exists('/app/healthcheck'), 'Healthcheck file missing'"
           initialDelaySeconds: 10
           periodSeconds: 30
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          readOnlyRootFilesystem: false
+          capabilities:
+            drop:
+            - ALL
       volumes:
       - name: data-volume
         persistentVolumeClaim:
@@ -96,4 +115,5 @@ spec:
       - name: logs-volume
         persistentVolumeClaim:
           claimName: service-quality-oracle-logs
+      serviceAccountName: service-quality-oracle
       restartPolicy: Always
