--- a/k8s/base/serviceaccount.yaml
+++ b/k8s/base/serviceaccount.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: service-quality-oracle
+  name: rewards-eligibility-oracle
   labels:
-    app: service-quality-oracle
+    app: rewards-eligibility-oracle
   annotations:
-    iam.gke.io/gcp-service-account: service-quality-oracle@graph-mainnet.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: rewards-eligibility-oracle@graph-mainnet.iam.gserviceaccount.com
 automountServiceAccountToken: false
