--- a/k8s/environments/mainnet/config.secret.yaml
+++ b/k8s/environments/mainnet/config.secret.yaml
@@ -1,5 +1,5 @@
 # Mainnet Secrets for Service Quality Oracle# IMPORTANT: This is a TEMPLATE file - DO NOT commit actual secrets!
-# 
+#
 # Usage:
 # 1. Replace all placeholder values with your actual mainnet secrets
 # 2. This file is used by kustomize secretGenerator
@@ -15,12 +15,12 @@
       "project_id": "graph-mainnet",
       "private_key_id": "your-key-id-here",
       "private_key": "-----BEGIN PRIVATE KEY-----\nYOUR-PRIVATE-KEY-CONTENT-HERE\n-----END PRIVATE KEY-----\n",
-      "client_email": "service-quality-oracle@graph-mainnet.iam.gserviceaccount.com",
+      "client_email": "rewards-eligibility-oracle@graph-mainnet.iam.gserviceaccount.com",
       "client_id": "your-client-id-here",
       "auth_uri": "https://accounts.google.com/o/oauth2/auth",
       "token_uri": "https://oauth2.googleapis.com/token",
       "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-      "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/service-quality-oracle%40graph-mainnet.iam.gserviceaccount.com"
+      "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/rewards-eligibility-oracle%40graph-mainnet.iam.gserviceaccount.com"
     }
 
 # Blockchain private key for Arbitrum Sepolia transactions (without 0x prefix)
