--- a/k8s/base/namespace.yaml
+++ b/k8s/base/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: service-quality-oracle
+  name: rewards-eligibility-oracle
   labels:
-    name: service-quality-oracle
+    name: rewards-eligibility-oracle
