--- a/k8s/environments/mainnet/kustomization.yaml
+++ b/k8s/environments/mainnet/kustomization.yaml
@@ -1,25 +1,25 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: service-quality-oracle
+namespace: rewards-eligibility-oracle
 
 resources:
   - ../../base
   - persistent-volume-claim.yaml
 
 secretGenerator:
-  - name: service-quality-oracle-secrets
+  - name: rewards-eligibility-oracle-secrets
     files:
       - config.secret.yaml
 
 configMapGenerator:
-  - name: service-quality-oracle-config
+  - name: rewards-eligibility-oracle-config
     files:
       - config.yaml
 
 images:
-  - name: ghcr.io/graphprotocol/service-quality-oracle
-    newName: ghcr.io/graphprotocol/service-quality-oracle
+  - name: ghcr.io/graphprotocol/rewards-eligibility-oracle
+    newName: ghcr.io/graphprotocol/rewards-eligibility-oracle
     newTag: mainnet-latest
 
 commonLabels:
