--- a/k8s/environments/mainnet/persistent-volume-claim.yaml
+++ b/k8s/environments/mainnet/persistent-volume-claim.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: service-quality-oracle-data
+  name: rewards-eligibility-oracle-data
   labels:
-    app: service-quality-oracle
+    app: rewards-eligibility-oracle
 spec:
   accessModes:
     - ReadWriteOnce
@@ -16,9 +16,9 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: service-quality-oracle-logs
+  name: rewards-eligibility-oracle-logs
   labels:
-    app: service-quality-oracle
+    app: rewards-eligibility-oracle
 spec:
   accessModes:
     - ReadWriteOnce
