chore(REO): update ServiceQualityOracle refs to RewardsEligibilityOracle

--- a/config.toml.example
+++ b/config.toml.example
@@ -13,7 +13,7 @@ BIGQUERY_TABLE_ID = ""
 
 [blockchain]
 BLOCKCHAIN_CONTRACT_ADDRESS = ""
-BLOCKCHAIN_FUNCTION_NAME = ""
+BLOCKCHAIN_FUNCTION_NAME = "renewIndexerEligibility"
 BLOCKCHAIN_CHAIN_ID = ""
 BLOCKCHAIN_RPC_URLS = [
     "",
