--- a/config.toml.example
+++ b/config.toml.example
@@ -13,7 +13,7 @@ BIGQUERY_TABLE_ID = ""
 
 [blockchain]
 BLOCKCHAIN_CONTRACT_ADDRESS = ""
-BLOCKCHAIN_FUNCTION_NAME = ""
+BLOCKCHAIN_FUNCTION_NAME = "renewIndexerEligibility"
 BLOCKCHAIN_CHAIN_ID = ""
 BLOCKCHAIN_RPC_URLS = [
     "",
@@ -44,7 +44,7 @@ FORCE_BIGQUERY_REFRESH = "false"
 
 [eligibility_criteria]
 MIN_ONLINE_DAYS = "5"
-MIN_SUBGRAPHS = "10"
+MIN_SUBGRAPHS = "1"
 MAX_LATENCY_MS = "5000"
 MAX_BLOCKS_BEHIND = "50000"
 
