refactor(auth): use official Google auth APIs for credentials
Replace private API access (google.auth._default._CREDENTIALS) with official Application Default Credentials google.auth.default()).

Key changes:
- Add CredentialManager.get_google_credentials() using google.auth.default()
- Implement explicit credential passing to BigQueryProvider (dependency injection)
- Update scheduler and oracle to use new credential loading
- Switch from inline JSON to file-based credentials
- Add comprehensive tests for new authentication flow
- Update docker-compose.yml to use generic service-account.json filename

Benefits:
- Uses official public APIs (future-proof against library updates)
- Follows SOLID principles (dependency inversion)
- Simpler codebase (~150 line reduction)
- Already compatible with GCP Workload Identity

All 199 tests passing.

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ SESSION_CONTEXT.md
 
 # Claude directory - we keep .claude/ for team sharing but ignore system files within it
 .claude/.DS_Store
+/keys
