--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,8 +6,11 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+
 env:
-  PYTHON_VERSION: "3.11"
+  PYTHON_VERSION: "3.13.7"
 
 jobs:
   # =============================================================================
