chore: update Docker image to v0.4.0
Updates deployment configurations to use v0.4.0 image version.

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: service-quality-oracle
-        image: ghcr.io/graphprotocol/service-quality-oracle:latest
+        image: ghcr.io/graphprotocol/service-quality-oracle:v0.4.0
         envFrom:
         # Load all non-sensitive configuration from ConfigMap
         - configMapRef:
