chore: rename service quality to rewards eligibility

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-# CODEOWNERS file for service-quality-oracle
+# CODEOWNERS file for rewards-eligibility-oracle
 # This file defines who will be requested for review when someone opens a pull request
 
 # Default owners for everything in the repo
