--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: google-github-actions/release-please-action@v4
         with:
           release-type: python
-          package-name: service-quality-oracle
+          package-name: rewards-eligibility-oracle
