--- a/config.toml.example
+++ b/config.toml.example
@@ -1,4 +1,4 @@
-# Service Quality Oracle Configuration
+# Rewards Eligibility Configuration
 # This file separates sensitive secrets from non-sensitive configuration values
 
 # =============================================================================
