--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -2,7 +2,7 @@
   "packages": {
     ".": {
       "release-type": "python",
-      "package-name": "service-quality-oracle",
+      "package-name": "rewards-eligibility-oracle",
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true,
