--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -5,51 +5,71 @@ metadata:
   labels:
     app: rewards-eligibility-oracle
 data:
-  # BigQuery Configuration
-  BIGQUERY_LOCATION_ID: "US"
-  BIGQUERY_PROJECT_ID: "graph-mainnet"
-  BIGQUERY_DATASET_ID: "internal_metrics"
-  BIGQUERY_TABLE_ID: "metrics_indexer_attempts"
-  BIGQUERY_CURATION_TABLE_ID: "metrics_curator_signals"
-  BIGQUERY_CURATOR_MAINNET_TABLE_ID: "curator_name_signal_dimensions_daily"
-  BIGQUERY_CURATOR_ARBITRUM_TABLE_ID: "curator_name_signal_dimensions_arbitrum_daily"
-  BIGQUERY_SUBGRAPH_LOOKUP_TABLE_ID: "subgraph_version_id_lookup"
-  BIGQUERY_ANALYSIS_PERIOD_DAYS: "28"
+  config.toml: |
+    # Service Quality Oracle Configuration
+    # This file separates sensitive secrets from non-sensitive configuration values
 
-  # Blockchain Configuration (Arbitrum Sepolia)
-  BLOCKCHAIN_CONTRACT_ADDRESS: "0x6d5550698F930210c3f50efe744bF51C55D791f6"
-  BLOCKCHAIN_FUNCTION_NAME: "renewIndexerEligibility"
-  BLOCKCHAIN_CHAIN_ID: "421614"
-  BLOCK_EXPLORER_URL: "https://sepolia.arbiscan.io"
-  TX_TIMEOUT_SECONDS: "30"
+    # =============================================================================
+    # NON-SENSITIVE CONFIGURATION
+    # =============================================================================
 
-  # RPC Provider URLs (Arbitrum Sepolia)
-  BLOCKCHAIN_RPC_URL_1: "https://arbitrum-sepolia.drpc.org"
-  BLOCKCHAIN_RPC_URL_2: "https://sepolia-rollup.arbitrum.io/rpc"
-  BLOCKCHAIN_RPC_URL_3: "https://api.zan.top/arb-sepolia"
-  BLOCKCHAIN_RPC_URL_4: "https://arbitrum-sepolia.gateway.tenderly.co"
+    [bigquery]
+    BIGQUERY_LOCATION_ID = "US"
+    BIGQUERY_PROJECT_ID = "graph-mainnet"
+    BIGQUERY_DATASET_ID = "internal_metrics"
+    BIGQUERY_TABLE_ID = "metrics_indexer_attempts"
+    BIGQUERY_CURATION_TABLE_ID = "metrics_curator_signals"
+    BIGQUERY_CURATOR_MAINNET_TABLE_ID = "curator_name_signal_dimensions_daily"
+    BIGQUERY_CURATOR_ARBITRUM_TABLE_ID = "curator_name_signal_dimensions_arbitrum_daily"
+    BIGQUERY_SUBGRAPH_LOOKUP_TABLE_ID = "subgraph_version_id_lookup"
 
-  # Scheduling Configuration
-  SCHEDULED_RUN_TIME: "10:00"
+    [blockchain]
+    BLOCKCHAIN_CONTRACT_ADDRESS = "0x9BED32d2b562043a426376b99d289fE821f5b04E"
+    BLOCKCHAIN_FUNCTION_NAME = "renewIndexerEligibility"
+    BLOCKCHAIN_CHAIN_ID = 421614
+    BLOCKCHAIN_RPC_URLS = [
+        "https://arbitrum-sepolia.drpc.org",
+        "https://sepolia-rollup.arbitrum.io/rpc",
+        "https://api.zan.top/arb-sepolia",
+        "https://arbitrum-sepolia.gateway.tenderly.co"
+    ]
+    BLOCK_EXPLORER_URL = "https://sepolia.arbiscan.io"
+    TX_TIMEOUT_SECONDS = "30"
 
-  # Subgraph URLs
-  SUBGRAPH_URL_PRE_PRODUCTION: "https://api.studio.thegraph.com/query/110664/issuance-eligibility-oracle/v0.1.4"
-  SUBGRAPH_URL_PRODUCTION: "https://gateway.thegraph.com/api/subgraphs/id/"
+    [scheduling]
+    SCHEDULED_RUN_TIME = "10:00"
 
-  # Processing Configuration
-  BATCH_SIZE: "125"
-  MAX_AGE_BEFORE_DELETION: "120"
+    [subgraph]
+    SUBGRAPH_URL_PRE_PRODUCTION = "https://api.studio.thegraph.com/query/110664/issuance-eligibility-oracle/v0.1.4"
+    SUBGRAPH_URL_PRODUCTION = "https://gateway.thegraph.com/api/subgraphs/id/"
 
-  # Caching Configuration
-  CACHE_MAX_AGE_MINUTES: "30"
-  FORCE_BIGQUERY_REFRESH: "false"
+    [processing]
+    BATCH_SIZE = 125
+    MAX_AGE_BEFORE_DELETION = 120
+    BIGQUERY_ANALYSIS_PERIOD_DAYS = "28"
 
-  # Eligibility Criteria
-  MIN_ONLINE_DAYS: "5"
-  MIN_SUBGRAPHS: "1"
-  MAX_LATENCY_MS: "5000"
-  MAX_BLOCKS_BEHIND: "50000"
-  MIN_CURATION_SIGNAL: "500"
+    [caching]
+    # Maximum age in minutes for cached data to be considered fresh
+    CACHE_MAX_AGE_MINUTES = "30"
+    # Force BigQuery refresh even if fresh cached data exists (true/false)
+    FORCE_BIGQUERY_REFRESH = "false"
 
-  # Runtime Configuration
-  RUN_ON_STARTUP: "true"
+    [eligibility_criteria]
+    MIN_ONLINE_DAYS = "5"
+    MIN_SUBGRAPHS = "1"
+    MAX_LATENCY_MS = "5000"
+    MAX_BLOCKS_BEHIND = "50000"
+    MIN_CURATION_SIGNAL = "500"
+
+    # =============================================================================
+    # SENSITIVE CONFIGURATION
+    # =============================================================================
+
+    [secrets]
+    GOOGLE_APPLICATION_CREDENTIALS = "$GOOGLE_APPLICATION_CREDENTIALS"
+    BLOCKCHAIN_PRIVATE_KEY = "$BLOCKCHAIN_PRIVATE_KEY"
+    ETHERSCAN_API_KEY = "$ETHERSCAN_API_KEY"
+    ARBITRUM_API_KEY = "$ARBITRUM_API_KEY"
+    STUDIO_API_KEY = "$STUDIO_API_KEY"
+    STUDIO_DEPLOY_KEY = "$STUDIO_DEPLOY_KEY"
+    SLACK_WEBHOOK_URL = "$SLACK_WEBHOOK_URL"
